--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Recepies</title>
 </head>
 <body>
+        <h1>Odin recepies</h1>
+        <ul>
+            <li><a href="/chicken_pasta.html"></li>
+            <li><a href="/lasagna.html"></a></li>
+        </ul>  
     
 </body>
 </html>
