Finished the recipe pages, chaged the file     structure a bit

--- a/chicken_pasta.html
+++ b/chicken_pasta.html
@@ -3,10 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skillet Chicken Pasta</title>
+    <title>Chicken pasta</title>
 </head>
 <body>
-    <h1>Skillet Chicken Pasta</h1>
-    
+    <h1>Chicken pasta</h1>
+    <img src="/images/pasta.jpg">
+    <h2>Description</h2>
+    <p>This chicken pasta skillet meal is a tasteful combination of vegetables, chicken, and pasta prepared in a cast iron skillet. My family eats tons of this stuff. </p>
+    <h2>Ingredients</h2>
+        <ul>
+            <li>1 tbsp olive oil</li>
+            <li>2 chicken breasts (cubed)</li>
+            <li>2 garlic cloves (minced)</li>
+            <li>2 cups chicken broth</li>
+            <li>1 cup heavy cream</li>
+            <li>12 oz penne pasta</li>
+            <li>1 tsp each: paprika, Italian seasoning, salt, pepper</li>
+            <li>1 cup shredded mozzarella, ½ cup grated Parmesan</li>
+        </ul>
+    <h2>Ingredients</h2>
+        <ol>
+            <li>Cook Chicken: Heat oil in a large skillet, season chicken with paprika, salt, and pepper, and cook until browned. Remove and set aside.</li>
+            <li>Make Sauce: In the same skillet, sauté garlic, add tomatoes, broth, cream, and Italian seasoning. Bring to a boil.</li>
+            <li>Add Pasta: Stir in penne, cover, and simmer until pasta is tender (10-12 min). </li>
+            <li>Combine: Add chicken back to the skillet, stir in mozzarella and Parmesan. Cook until cheese melts.</li>
+        </ol>
+    <a href="/index.html">Home</a>
 </body>
 </html>
