--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
         <h1>Odin recepies</h1>
         <ul>
-            <li><a href="/chicken_pasta.html">Chicken pasta</li>
-            <li><a href="/Lasgna.html">Lasagna</a></li>
+            <li><a href="chicken_pasta.html">Chicken pasta</li>
+            <li><a href="Lasgna.html">Lasagna</a></li>
         </ul>  
     
 </body>
