--- a/Lasgna.html
+++ b/Lasgna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="images/pasta.jpg">
+    <img src="/images/lasagna.jpg">
     <h2>Description</h2>
     <p>Everyone loves a good lasagna, right? It's a great way to feed a crowd and a perfect dish to bring to a potluck. It freezes well. It reheats well. Leftovers will keep you happy for days. </p>
     <h2>Ingredients</h2>
