--- a/chicken_pasta.html
+++ b/chicken_pasta.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Chicken pasta</h1>
-    <img src="/images/pasta.jpg">
+    <img src="images/pasta.jpg">
     <h2>Description</h2>
     <p>This chicken pasta skillet meal is a tasteful combination of vegetables, chicken, and pasta prepared in a cast iron skillet. My family eats tons of this stuff. </p>
     <h2>Ingredients</h2>
