LAST ONE I PROMISE

--- a/Lasgna.html
+++ b/Lasgna.html
@@ -29,7 +29,7 @@
             <li>Bake: Cover and bake at 375°F (190°C) for 25 min, uncover and bake 20 min until golden.</li>
             <li>Serve: Let rest 10 min before slicing. Enjoy!</li>
         </ol>
-    <a href="/index.html">Home</a>
+    <a href="index.html">Home</a>
 
 </body>
 </html>
