--- a/chicken_pasta.html
+++ b/chicken_pasta.html
@@ -28,6 +28,6 @@
             <li>Add Pasta: Stir in penne, cover, and simmer until pasta is tender (10-12 min). </li>
             <li>Combine: Add chicken back to the skillet, stir in mozzarella and Parmesan. Cook until cheese melts.</li>
         </ol>
-    <a href="/index.html">Home</a>
+    <a href="index.html">Home</a>
 </body>
 </html>
